fixed spacing with open requests header

--- a/client/src/components/organisms/style/DonorRequestGroupBrowser.scss
+++ b/client/src/components/organisms/style/DonorRequestGroupBrowser.scss
@@ -13,6 +13,10 @@
   &-list {
     border-right: $border-line;
   }
+  
+  .donor-request-group-browser-header {
+    margin-bottom: 0;
+  }
 
   .donor-request-group-browser-indiv-view {
     padding: 0;
